# bevy_rim_effect

./: .gitignore  Cargo.toml  Makefile  README.md
assets/scenes/: cube_chest.glb  pyramida.glb
assets/shaders/: fragment.wgsl
assets/textures/TilesCeramicHerringbone002/: TilesCeramicHerringbone002_BUMP16_1K.tif  TilesCeramicHerringbone002_DISP16_1K.tif  TilesCeramicHerringbone002_IDMAP_1K.tif
examples/demo/: asset_loader.rs  camera.rs  collider.rs  cursor.rs  hovering.rs  light.rs  main.rs  outlines.rs  ui_help.rs  world.rs
src/: lib.rs  outline.rs  rim_effect.rs  rim_effect.wgsl
