[package]
name = "outline_research"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features=[ "jpeg" ] }
bevy_rapier3d = "0.23"
defaults = "0.2.0"

#[dev-dependencies]
#bevy = { version = "0.13.0", features=[ "jpeg" ] }
#defaults = "0.2.0"